--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - Remove one method of indirection in QueryableListObjs
 - Implement subtraction for QueryableList (not present in list)
 - Treat the lack of a field as None/null. This adds a slight overhead, but really simplifies filtering on multiple object types
+- Speed up some access
 
 * 1.0.0 - Jan 6 2016
 - First Release
