--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+* 2.2.0 - Mar 14 2017
+- Add icontains and noticontains operations to do a case-insensitive
+"contains" and "not contains" filtering
+
 * 2.1.0 - Apr 12 2016
 - Add "all" method that returns the list, so that projects which also use
 IndexedRedis can have a type-agnostic interface for filtering (i.e. "all" will
